--- a/quantri/quantri.html
+++ b/quantri/quantri.html
@@ -10,15 +10,15 @@
 	<div id="header">
     	<div id="navbar">
         	<ul>
-            	<li id="admin-home"><a href="#">trang 1</a></li>
-                <li><a href="#">thành viên</a></li>
-                <li><a href="#">Sản phẩm</a></li>
-                <li><a href="#">sản phẩm</a></li>
-                <li><a target="_blank" href="#">Thêm mới</a></li>
+            	<li id="admin-home"><a href="#">Intro</a></li>
+                <li><a href="#">Linked Pages</a></li>
+                <li><a href="#">Employees</a></li>
+                <li><a href="#">Products</a></li>
+                <!--<li><a target="_blank" href="#">Thêm mới</a></li>-->
             </ul>
             <div id="user-info">
-            	<p>Xin chào <span>admin</span> đã đăng nhập vào hệ thống</p>
-                <p><a href="#">Đăng xuất</a></p>
+            	<p>Welcome <span>admin</span> Signing in System</p>
+                <p><a href="#">Sign Out</a></p>
             </div>
         </div>
         <div id="banner">
@@ -26,34 +26,34 @@
         </div>
     </div>
     <div id="body">
-        <h2>giới thiệu</h2>
+        <h2>Introduction</h2>
 		<div id="main">
         <p>
-        Hệ thống quản trị này có các chức năng quản lý sau:
+        Information System has these functions:
         <br />
-        - Quản lý Thành viên
+        - Person Management
         <br />
         - Quản lý Danh mục sản phẩm
         <br />
-        - Quản lý Sản phẩm
+        - Product Management
         <br />
         - ...
         </p>
         <br />
         <p>
-        Hệ thống đang trong quá trình hoàn thiện!
+        .... System is being improved!
         </p>
         <br />
         <p>
-        	<b>Nhóm phát triển!</b>
+        	<b></b>
         </p>
     	</div>
     </div>
     <div id="footer">
     	<div id="footer-info">
         	<h4></h4>
-            <p><span>Địa chỉ:</span> Tầng 2, Tòa nhà Trung Tâm, 124 Hoàng Quốc Việt - Cầu Giấy - Hà Nội | <span>Phone</span> 0914703890</p>
-            <p>Bản quyền thuộc ...</p>
+            <p><span></span> Floor 2, Center Block, 124 Hoàng Quốc Việt - Cầu Giấy - Hà Nội | <span>Phone:</span> 0914703890</p>
+            <!--<p>Bản quyền thuộc ...</p>-->
         </div>
     </div>
 </div>
