Commit title name

--- a/quantri/quantri.html
+++ b/quantri/quantri.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Hê quản trị dữ liệu</title>
+<title>Database System</title>
 <link rel="stylesheet" type="text/css" href="css/quantri.css" />
 </head>
 <body>
