--- a/quantri/quantri.html
+++ b/quantri/quantri.html
@@ -11,14 +11,16 @@
     	<div id="navbar">
         	<ul>
             	<li id="admin-home"><a href="#">Intro</a></li>
-                <li><a href="#">Linked Pages</a></li>
-                <li><a href="#">Employees</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="#">Người dùng</a></li>
+                <li><a href="#">Nhóm Sàn phẩm</a></li>
+                <li><a href="#">Sản phẩm Nhận</a></li>
+                <li><a href="#">Sản phẩm Sửa</a></li>
+                <li><a href="#">Linh kiện</a></li>
                 <!--<li><a target="_blank" href="#">Thêm mới</a></li>-->
             </ul>
             <div id="user-info">
-            	<p>Welcome <span>admin</span> Signing in System</p>
-                <p><a href="#">Sign Out</a></p>
+            	<p>Xin chào <span>admin</span> Đăng nhập hệ thống</p>
+                <p><a href="#">Đăng xuất</a></p>
             </div>
         </div>
         <div id="banner">
@@ -29,13 +31,15 @@
         <h2>Introduction</h2>
 		<div id="main">
         <p>
-        Information System has these functions:
+        Hệ thống có các chức năng sau:
         <br />
-        - Person Management
+        - Lưu trữ thông tin người dùng
         <br />
-        - Quản lý Danh mục sản phẩm
+        - Lưu danh dữ liệu nhóm sản phẩm, sản phẩm
         <br />
-        - Product Management
+        - Lưu trữ dữ liệu linh kiện thay thế
+        <br />
+        - Lưu trữ dữ liệu sửa lỗi
         <br />
         - ...
         </p>
@@ -44,15 +48,13 @@
         .... System is being improved!
         </p>
         <br />
-        <p>
-        	<b></b>
-        </p>
+
     	</div>
     </div>
     <div id="footer">
     	<div id="footer-info">
-        	<h4></h4>
-            <p><span></span> Floor 2, Center Block, 124 Hoàng Quốc Việt - Cầu Giấy - Hà Nội | <span>Phone:</span> 0914703890</p>
+        	<h4> </h4>
+            <p><span></span> Tầng 2, Nhà 5 tầng, 124 Hoàng Quốc Việt - Cầu Giấy - Hà Nội | <span>Phone:</span> 0914703890</p>
             <!--<p>Bản quyền thuộc ...</p>-->
         </div>
     </div>
