--- a/quantri/index.html
+++ b/quantri/index.html
@@ -8,11 +8,11 @@
 <body>
 <form method="post">
 <div id="form-login">
-	<h2>Sign In Database Management System <span>error</span></h2>
+	<h2>Đăng nhập hệ thống<span>error</span></h2>
     <ul>
-        <li><label>user</label><input type="text" name="tk" /></li>
-        <li><label>password</label><input type="password" name="mk" /></li>
-        <li><label>Save user</label><input type="checkbox" name="check" checked="checked" /></li>
+        <li><label>Người dùng</label><input type="text" name="tk" /></li>
+        <li><label>Mật khẩu</label><input type="password" name="mk" /></li>
+        <li><label>Ghi nhớ</label><input type="checkbox" name="check" checked="checked" /></li>
         <li><input type="submit" name="submit" value="Sign In" /> <input type="reset" name="resset" value="Refresh" /></li>
     </ul>
 </div>
