--- a/quantri/quantri.html
+++ b/quantri/quantri.html
@@ -16,6 +16,7 @@
                 <li><a href="#">Sản phẩm Nhận</a></li>
                 <li><a href="#">Sản phẩm Sửa</a></li>
                 <li><a href="#">Linh kiện</a></li>
+                <li><a href="#">Hành động sửa</a></li>
                 <!--<li><a target="_blank" href="#">Thêm mới</a></li>-->
             </ul>
             <div id="user-info">
